Replace GO enrichment files with combined expression in rule all
If we do not want to compare the samples, set do_comparisons to false and the pipeline will stop at the quantifications

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -88,44 +88,11 @@ include: "rules/deseq_analysis_comparison.smk"
 
 rule all:
     input:
-       f"results/Quant/Count/combined_expression.csv",
-       expand("results/Quant/Count/quant/{sample}/quant.sf", sample=samples),
-       expand("results/Differential/deglist/{comparison}_deg_results.csv", comparison=comparisons),
-       samplesheet_df["fastq_1"].tolist(),
-       samplesheet_df["fastq_2"].tolist(),
-       expand("results/adapters/{sample}_adapters.txt", sample=samples),
-       expand("results/trimmed/{sample}_{suffix}.atria.fastq.gz", sample=samples, suffix=["1", "2"]),
-       expand("results/fastqc/trimmed/{sample}_{suffix}.atria_fastqc.html", sample=samples, suffix=["1", "2"]),
-       expand("results/fastqc/raw/{sample}_{suffix}_fastqc.html", sample=samples, suffix=["1", "2"]),
-       f"results/multiqc/trimmed/multiqc_report.html",
-       f"results/multiqc/raw/multiqc_report.html",
-       f"results/multiqc/bam/multiqc_report.html",
-       expand("results/aligned/{sample}.bam", sample=samples),
-       expand("results/aligned/{sample}.bam.bai", sample=samples),
-       expand("results/qc/samtools/{sample}_samtools_stats.txt", sample=samples),
-       expand("results/qc/samtools/{sample}_flagstat.txt", sample=samples),
-       expand("results/qc/rseqc/{sample}_infer_experiment.txt", sample=samples),
-       expand("results/qc/rseqc/{sample}_read_distribution.txt", sample=samples),
-       expand("results/qc/rseqc/{sample}.geneBodyCoverage.txt", sample=samples),
-       expand("results/qc/rseqc/{sample}.geneBodyCoverage.curves.pdf", sample=samples),
-       expand("results/qc/rseqc/{sample}.junctionSaturation_plot.pdf", sample=samples),
-       expand("results/qc/rseqc/{sample}.DupRate_plot.pdf", sample=samples),
-       expand("results/qc/rseqc/{sample}.DupRate_plot.r", sample=samples),
-       expand("results/qc/rseqc/{sample}.saturation.pdf", sample=samples),
-       expand("results/qc/rseqc/{sample}.saturation.r", sample=samples),
-       expand("results/qc/rseqc/{sample}.eRPKM.xls", sample=samples),
-       expand("results/qc/rseqc/{sample}_read_distribution.txt", sample=samples),
-       expand("results/qc/rseqc/{sample}_bam_stat.txt", sample=samples),
-       expand("results/qc/mosdepth/{sample}.mosdepth.summary.txt", sample=samples),
-       expand("results/enrichment/GO/Biological_Process/{comparison}_biological_process_enrichment.csv", comparison=comparisons),
-       expand("results/enrichment/GO/Molecular_Function/{comparison}_molecular_function_enrichment.csv", comparison=comparisons),
-       expand("results/enrichment/GO/Cellular_Component/{comparison}_cellular_component_enrichment.csv", comparison=comparisons),
-
-       # The reference files + Salmon index for the selected genome
-       expand(config["genes_gtf"], selected_genome=selected_genome),
-       expand(config["genome_fasta"], selected_genome=selected_genome),
-       expand(config["cdna_fasta"], selected_genome=selected_genome),
-       expand(config["star_index"], selected_genome=selected_genome),
-       expand(config["salmon_index"], selected_genome=selected_genome),
-       f"resources/{selected_genome}.bed",
-       f"resources/{selected_genome}_canonical_transcripts.txt"
+        # Files which are created for the last analyses, needed for Snakemake to
+        # understand what is needed to be run
+        f"results/multiqc/trimmed/multiqc_report.html" if config["trim_reads"] else [],
+        f"results/multiqc/raw/multiqc_report.html",
+        f"results/multiqc/bam/multiqc_report.html",
+        expand("results/enrichment/GO/Biological_Process/{comparison}_biological_process_enrichment.csv", comparison=comparisons) if config["do_comparison"] else "results/Quant/Count/combined_expression.csv",
+        expand("results/enrichment/GO/Molecular_Function/{comparison}_molecular_function_enrichment.csv", comparison=comparisons) if config["do_comparison"] else [],
+        expand("results/enrichment/GO/Cellular_Component/{comparison}_cellular_component_enrichment.csv", comparison=comparisons) if config["do_comparison"] else [],
